# asr-assisted-transcription

./: .gitignore  README.md  appunti_formato  pyproject.toml
data/: data_description.csv  error_types.csv  output01_ParlaBOA_E.eaf  output01_ParlaBOA_M.eaf  output01_ParlaBOB_N.eaf  output01_PastiA_O.eaf  output01_PastiA_R.eaf  output01_PastiB_V.eaf  output01_StraParlaA_I.eaf  output01_StraParlaA_L.eaf  output01_StraParlaB_A.eaf  output01_StraParlaC_S.eaf  output01_StraParlaC_U.eaf  output02_ParlaBOA_I.eaf  output02_ParlaBOA_L.eaf  output02_ParlaBOB_S.eaf  output02_PastiA_E.eaf  output02_PastiA_M.eaf  output02_PastiB_U.eaf  output02_StraParlaA_A.eaf  output02_StraParlaA_V.eaf  output02_StraParlaB_O.eaf  output02_StraParlaB_R.eaf  output02_StraParlaC_N.eaf  output03_ParlaBOA.eaf  output03_ParlaBOB.eaf  output03_PastiA.eaf  output03_PastiB.eaf  output03_StraParlaA.eaf  output03_StraParlaA_man.eaf  output03_StraParlaA_whi.eaf  output03_StraParlaB.eaf  output03_StraParlaB_man.eaf  output03_StraParlaB_whi.eaf  output03_StraParlaC.eaf  output03_StraParlaC_man.eaf  output03_StraParlaC_whi.eaf  transcript_id
data/alignments/: 01_ParlaBOA_E.tus_01_ParlaBOA_M.tus.tsv  01_ParlaBOA_E.tus_02_ParlaBOA_I.tus.tsv  01_ParlaBOA_E.tus_02_ParlaBOA_L.tus.tsv  01_ParlaBOA_M.tus_02_ParlaBOA_I.tus.tsv  01_ParlaBOA_M.tus_02_ParlaBOA_L.tus.tsv  01_ParlaBOB_N.tus_02_ParlaBOB_S.tus.tsv  01_PastiA_O.tus_01_PastiA_R.tus.tsv  01_PastiA_O.tus_02_PastiA_M.tus.tsv  01_PastiB_V_03_PastiB.tsv  (+83 more)
data_analysis/: analysis.ipynb  prova_ludovica.ipynb  transcribers_graphs.ipynb
tests/: test_functions.py
(+517 files in other folders)
