[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asr-analysis"
version = "0.0.1"
authors = [
  { name="Ludovica Pannitto", email="ludovica.pannitto@unibo.it" },
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]